--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "android-shake": "adb shell input keyevent 82"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.14",
     "@react-native-firebase/app": "^17.1.0",
     "@react-native-firebase/auth": "^17.1.0",
     "@react-native-firebase/firestore": "^17.1.0",
@@ -21,6 +22,7 @@
     "@react-navigation/native-stack": "^6.9.4",
     "@react-navigation/stack": "^6.3.7",
     "firebase": "^9.15.0",
+    "native-base": "^3.4.25",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-gesture-handler": "^2.8.0",
@@ -31,7 +33,9 @@
     "react-native-status-bar-height": "^2.6.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tts": "^4.1.0",
+    "react-native-webview": "^11.26.1",
     "react-speech-kit": "^3.0.1",
+  
     "semantic-ui-react": "^2.1.4"
   },
   "devDependencies": {
