--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -258,6 +258,7 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 //  implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation project(':react-native-splash-screen')
   implementation platform('com.google.firebase:firebase-bom:31.2.0')
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
