--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.14",
+    "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-community/geolocation": "^3.0.6",
     "@react-native-firebase/app": "^17.1.0",
     "@react-native-firebase/auth": "^17.1.0",
     "@react-native-firebase/firestore": "^17.1.0",
@@ -21,21 +23,25 @@
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
     "@react-navigation/stack": "^6.3.7",
+    "axios": "^1.3.5",
     "firebase": "^9.15.0",
     "native-base": "^3.4.25",
+    "npx": "^10.2.2",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-fused-location": "^1.1.2",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-paper": "^5.0.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tts": "^4.1.0",
     "react-native-webview": "^11.26.1",
     "react-speech-kit": "^3.0.1",
-  
     "semantic-ui-react": "^2.1.4"
   },
   "devDependencies": {
